@@ -1,3 +1,8 @@
+2010-11-13  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* config/tc-mips.c (macro_build): Remove gas_assert from 'o' case.
+	Use a restricted gas_assert for 'i' and 'j'.
+
 2010-11-11  Mingming Sun  <mingm.sun@gmail.com>
 
 	* config/tc-mips.c (mips_cpu_info_table): Add loongson3a in MIPS 64.
